--- a/.github/Workflows/reactci.yaml
+++ b/.github/Workflows/reactci.yaml
@@ -8,7 +8,10 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
 
     steps:
       - name: Checkout repository
@@ -30,3 +33,4 @@ jobs:
 
       - name: Build project
         run: npm run build --if-present
+
